--- a/.github/workflows/deploy-frontend-to-s3.yml
+++ b/.github/workflows/deploy-frontend-to-s3.yml
@@ -1,6 +1,8 @@
 name: Deploy frontend to s3
-on: workflow_dispatch
-
+on:
+  push:
+    branches:
+      - "nonexistentbranch"
 jobs:
   build:
     runs-on: ubuntu-latest
