--- a/.github/workflows/deploy-backend-to-ecr.yml
+++ b/.github/workflows/deploy-backend-to-ecr.yml
@@ -1,4 +1,4 @@
-name: Deploy backend???
+name: Build backend and move to ECR
 on:
   workflow_dispatch:
 
@@ -25,7 +25,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: sheltr_repo
-          IMAGE_TAG: sheltr_backend
+          IMAGE_TAG: latest
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
