envs, tf working mostly

--- a/.github/workflows/deploy-backend-to-ecr.yml
+++ b/.github/workflows/deploy-backend-to-ecr.yml
@@ -26,6 +26,12 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: sheltr_repo
           IMAGE_TAG: latest
+          MONGO_DBHOST: "pz-db.chintogtokh.com"
+          MONGO_DBPORT: "27017"
+          MONGO_DBNAME: "sheltr"
+          MONGO_DBUSER: ${{ secrets.MONGO_DBUSER }}
+          MONGO_DBPASS: ${{ secrets.MONGO_DBPASS }}
+          MONGO_JWTSECRET: "dummysecret"
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
