--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - ./mongo-auth.js:/docker-entrypoint-initdb.d/mongo-auth.js:ro
       - ./mongo-loaddata.sh:/docker-entrypoint-initdb.d/mongo-loaddata.sh:ro
-      - ./suburbs.json:/docker-entrypoint-initdb.d/suburbs.json:ro
+      - ./suburb.json:/docker-entrypoint-initdb.d/suburb.json:ro
       - ./uni_for_mongo.txt:/docker-entrypoint-initdb.d/uni_for_mongo.txt:ro
   frontend:
     build: ./frontend
