--- a/.github/workflows/deploy-backend-to-ecr.yml
+++ b/.github/workflows/deploy-backend-to-ecr.yml
@@ -33,5 +33,6 @@ jobs:
           MONGO_DBPASS: ${{ secrets.MONGO_DBPASS }}
           MONGO_JWTSECRET: "dummysecret"
         run: |
+          echo "MONGO_JWTSECRET:$MONGO_JWTSECRET\nMONGO_DBHOST:$MONGO_DBHOST\nMONGO_DBPORT:$MONGO_DBPORT\nMONGO_DBNAME:$MONGO_DBNAME\nMONGO_DBUSER:$MONGO_DBUSER\nMONGO_DBPASS:$MONGO_DBPASS" > .env
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
