--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "cors": "^2.8.4",
+    "dotenv": "^16.0.3",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
     "md5": "^2.2.1",
