--- a/.github/workflows/load-mongo-data.yml
+++ b/.github/workflows/load-mongo-data.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Mongo tools install
         run: |
-          apt install -y mongodb-org
+          sudo apt install -y mongodb-org
       - name: Import universities
         run: |
           mongoimport --host pztest-db.chintogtokh.com:27017 --username $MONGO_DBUSER --password $MONGO_DBPASS --drop --legacy --db sheltr --collection universities --type json --file uni_for_mongo.txt
