--- a/.github/workflows/load-mongo-data.yml
+++ b/.github/workflows/load-mongo-data.yml
@@ -15,6 +15,9 @@ jobs:
       - uses: actions/checkout@v1
       - name: Mongo tools install
         run: |
+          curl -fsSL https://www.mongodb.org/static/pgp/server-4.4.asc | sudo apt-key add -
+          echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/4.4 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.4.list
+          sudo apt update
           sudo apt install -y mongodb-org
       - name: Import universities
         run: |
