--- a/.github/workflows/load-mongo-data.yml
+++ b/.github/workflows/load-mongo-data.yml
@@ -21,7 +21,21 @@ jobs:
           sudo apt install -y mongodb-org
       - name: Import universities
         run: |
-          mongoimport --authenticationDatabase=admin --host pztest-db.chintogtokh.com:27017 --username $MONGO_DBUSER --password $MONGO_DBPASS --drop --legacy --db sheltr --collection admin --type json --file uni_for_mongo.txt
+          mongoimport --authenticationDatabase=admin --host pztest-db.chintogtokh.com:27017 --username $MONGO_DBUSER --password $MONGO_DBPASS --drop --legacy --db admin --collection universities --type json --file uni_for_mongo.txt
+        env:
+          MONGO_DBUSER: ${{ secrets.MONGO_DBUSER }}
+          MONGO_DBPASS: ${{ secrets.MONGO_DBPASS }}
+      - uses: keithweaver/aws-s3-github-action@v1.0.0
+        with:
+          command: cp
+          source: s3://www.chintogtokh.com/suburb.json
+          destination: ./suburb.json
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: ap-southeast-2
+      - name: Import universities
+        run: |
+          mongoimport --authenticationDatabase=admin --host pztest-db.chintogtokh.com:27017 --username $MONGO_DBUSER --password $MONGO_DBPASS --drop --legacy --db admin --collection suburbs --type json --file suburb.json
         env:
           MONGO_DBUSER: ${{ secrets.MONGO_DBUSER }}
           MONGO_DBPASS: ${{ secrets.MONGO_DBPASS }}
