--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "babel src -s -D -d dist --presets es2015,stage-0",
     "start": "node dist",
     "prestart": "npm run -s build",
-    "test": "eslint src"
+    "eslint": "eslint src",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=5000"
   },
   "keywords": [
     "Express",
@@ -19,19 +20,23 @@
   "author": "Chintogtokh Batbold",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
     "babel-cli": "^6.26.0",
+    "babel-jest": "^29.4.3",
     "babel-preset-env": "^1.6.1",
-    "nodemon": "^1.17.3",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^3.1.1"
+    "eslint": "^3.1.1",
+    "nodemon": "^1.17.3"
   },
   "dependencies": {
     "@sentry/node": "^7.40.0",
     "@sentry/tracing": "^7.40.0",
     "cors": "^2.8.4",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.16.3",
+    "jest": "^29.4.3",
     "jsonwebtoken": "^8.2.1",
     "md5": "^2.2.1",
     "mongo-sanitize": "^1.0.0",
@@ -39,6 +44,12 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   }
 }
